--- a/src/main/resources/static/web/admiPages/manager.html
+++ b/src/main/resources/static/web/admiPages/manager.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  
+
   <div id="app">
 
     <header class="d-flex align-items-center text-center justify-content-around flex-wrap p-2">
@@ -56,6 +56,10 @@
               placeholder="Email..." v-model="email" />
             <div id="emailHelp" class="form-text">
               We'll never share your email with anyone else.
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password:</label>
+              <input type="text" class="form-control" id="lastName" placeholder="Last Name..." v-model="lastName" />
             </div>
           </div>
           <button type="submit" class="btn btn-primary" id="button-add" @click.prevent="voidInput">
@@ -126,6 +130,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.27/dist/sweetalert2.all.min.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./manager.js"></script>
