--- a/src/main/resources/static/web/assets/pages/create-card.html
+++ b/src/main/resources/static/web/assets/pages/create-card.html
@@ -1,98 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="shortcut icon"
-      href="../images/Mindhub Brothers-logos_transparent.png"
-      type="image/x-icon"
-    />
-    <link rel="stylesheet" href="../style/accounts.css" />
-    <title>Create Card | Mindhub Brothers</title>
-  </head>
-  <body>
-    <div id="app">
-      <nav class="navbar navbar-expand-lg" data-bs-theme="dark" id="bg-nav">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"
-            ><img
-              src="../images/Mindhub Brothers-logos.jpeg"
-              alt="logo"
-              title="Logo Mindhub Brothers"
-              class="logo-mb rounded-circle"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarColor01"
-            aria-controls="navbarColor01"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav ms-auto gap-3">
-              <li class="nav-item">
-                <a class="nav-link" href="./accounts.html"
-                  >ACCOUNTS
-                  <span class="visually-hidden">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active fw-bold" href="#">CARDS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">LOANS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">TRANSACTION</a>
-              </li>
-              <li class="nav-item">
-                <button class="button">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                    class="w-6 h-6"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75"
-                    ></path>
-                  </svg>
-                  <div class="text">Log out</div>
-                </button>
-              </li>
-            </ul>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  <link rel="shortcut icon" href="../images/Mindhub Brothers-logos_transparent.png" type="image/x-icon" />
+  <link rel="stylesheet" href="../style/accounts.css" />
+  <title>Create Card | Mindhub Brothers</title>
+</head>
+
+<body>
+  <div id="app">
+    <nav class="navbar navbar-expand-lg" data-bs-theme="dark" id="bg-nav">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="../images/Mindhub Brothers-logos.jpeg" alt="logo"
+            title="Logo Mindhub Brothers" class="logo-mb rounded-circle" /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+          aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav ms-auto gap-3">
+            <li class="nav-item">
+              <a class="nav-link" href="./accounts.html">ACCOUNTS
+                <span class="visually-hidden">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active fw-bold" href="./cards.html">CARDS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">LOANS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">TRANSACTION</a>
+            </li>
+            <li class="nav-item">
+              <button class="button">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="w-6 h-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75">
+                  </path>
+                </svg>
+                <div class="text">Log out</div>
+              </button>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 
-      <header>
-        <h1 class="text-light text-center">Welcome to your account</h1>
-      </header>
+    <header>
+      <h1 class="text-light text-center">Welcome to your account</h1>
+    </header>
 
-      <main class="container my-5 rounded-4 align-items-center d-flex flex-column text-light" id="main-cards">
-        <h2 class="text-center">Please fill the following form</h2>
+    <main class="container my-5 rounded-5 p-3 align-items-center d-flex flex-column text-light" id="main-cards">
+      <h2 class="text-center">Please fill the next form</h2>
+      
+      <form @submit.prevent="alert">
         <div class="form-floating">
-          <select
-            class="form-select"
-            id="floatingSelect"
-            aria-label="Floating label select example"
-            v-model="color"
-          >
+
+          <select class="form-select" id="floatingSelect" aria-label="Floating label select example" v-model="color">
             <option selected>Open this select menu</option>
             <option value="GOLD">GOLD</option>
             <option value="TITANIUM">TITANIUM</option>
@@ -104,95 +74,50 @@
         <div class="mt-5">
           <h3 class="text-center">Select the type card</h3>
           <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="flexRadioDefault"
-              id="flexRadioDefault1"
-              value="DEBIT"
-              v-model="type"
-            />
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="DEBIT"
+              v-model="type" />
             <label class="form-check-label" for="flexRadioDefault1">
               DEBIT CARD
             </label>
           </div>
           <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="flexRadioDefault"
-              id="flexRadioDefault2"
-              value="CREDIT"
-              v-model="type"
-            />
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="CREDIT"
+              v-model="type" />
             <label class="form-check-label" for="flexRadioDefault2">
               CREDIT CARD
             </label>
           </div>
         </div>
+        <button type="submit" class="btn btn-warning mt-3 p-1">CREATE CARD</button>
+      </form>
+    </main>
 
-        <button type="button" class="btn btn-warning mt-3 p-1" @click.prevent="alert">CREATE CARD</button>
-      </main>
+    <footer class="d-flex flex-column justify-content-center align-items-center p-2 text-center">
+      <p class="text-light">
+        © 2023 Mindhub Brother, Inc | All right reserve to Karen Buitrago
+      </p>
+      <nav class="d-flex gap-3 justify-content-center">
+        <a href="https://github.com/KarenBuitrago2825"><img src="../images/github-sign.png" alt="github"
+            title="GitHub Karen Buitrago" class="network-img" /></a>
+        <a href="https://web.whatsapp.com/"><img src="../images/whatsapp(1).png" alt="whatsapp" title="WhatsApp"
+            class="network-img" /></a>
+        <a href="https://www.instagram.com/"><img src="../images/instagram(1).png" alt="instagram" title="Instagram"
+            class="network-img" /></a>
+        <a href="https://es-la.facebook.com/"><img src="../images/facebook(1).png" alt="facebok" title="Facebook"
+            class="network-img" /></a>
+        <a href="mailto: mindhubrothers@gmail.com"><img src="../images/gmail.png" alt="mail" title="Mail"
+            class="network-img" /></a>
+        <a href="tel: 654456987"><img src="../images/customer-service.png" alt="call-center" title="Call Us"
+            class="network-img" /></a>
+      </nav>
+    </footer>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="../scripts/create-cards.js"></script>
+</body>
 
-      <footer
-        class="d-flex flex-column justify-content-center align-items-center p-2 text-center"
-      >
-        <p class="text-light">
-          © 2023 Mindhub Brother, Inc | All right reserve to Karen Buitrago
-        </p>
-        <nav class="d-flex gap-3 justify-content-center">
-          <a href="https://github.com/KarenBuitrago2825"
-            ><img
-              src="../images/github-sign.png"
-              alt="github"
-              title="GitHub Karen Buitrago"
-              class="network-img"
-          /></a>
-          <a href="https://web.whatsapp.com/"
-            ><img
-              src="../images/whatsapp(1).png"
-              alt="whatsapp"
-              title="WhatsApp"
-              class="network-img"
-          /></a>
-          <a href="https://www.instagram.com/"
-            ><img
-              src="../images/instagram(1).png"
-              alt="instagram"
-              title="Instagram"
-              class="network-img"
-          /></a>
-          <a href="https://es-la.facebook.com/"
-            ><img
-              src="../images/facebook(1).png"
-              alt="facebok"
-              title="Facebook"
-              class="network-img"
-          /></a>
-          <a href="mailto: mindhubrothers@gmail.com"
-            ><img
-              src="../images/gmail.png"
-              alt="mail"
-              title="Mail"
-              class="network-img"
-          /></a>
-          <a href="tel: 654456987"
-            ><img
-              src="../images/customer-service.png"
-              alt="call-center"
-              title="Call Us"
-              class="network-img"
-          /></a>
-        </nav>
-      </footer>
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="../scripts/create-cards.js"></script>
-  </body>
 </html>
