--- a/src/main/resources/static/web/assets/pages/accounts.html
+++ b/src/main/resources/static/web/assets/pages/accounts.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg" data-bs-theme="dark" id="bg-nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="../images/Mindhub Brothers-logos.jpeg" alt="logo"
-            title="Logo Mindhub Brothers" class="logo-mb" /></a>
+            title="Logo Mindhub Brothers" class="logo-mb rounded-circle" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
           aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
