actualizacióon task 11 items 1-4

--- a/src/main/resources/static/web/assets/pages/accounts.html
+++ b/src/main/resources/static/web/assets/pages/accounts.html
@@ -86,6 +86,7 @@
             </div>
             <a :href="'./account.html?id='+account.id" class="btn text-center mt-2 text-light"
               id="btn-transaction">Transaction History</a>
+              <button class="btn btn-danger mt-2">Delete Account</button>
           </div>
         </template>
         <template v-if="accounts.length < 3">
